[package]
name = "retirement-calculator"
version = "0.1.0"
authors = ["Tristan <tristan.m.bull@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
indexmap = { version = "^1.3.2", features = ["serde-1"] }
seed = "^0.6.0"
serde_json = "1.0.48"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "^0.2.50"


# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"
num-format = "0.4.0"


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
